# mdivicomtools

./: .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: README.md  RELEASE.md  openSIDS_v0.1.md  plugin_contract_v0.1.md  public_private_bridge_v0.1.md
mdivicomtools/: __init__.py  cli.py  plugin_registry.py  provenance.py
mdivicomtools/utils/: __init__.py  logging.py  logging_utils.py  rename.py
scripts/release/: bump_version.sh  release_check.sh  tag_release.sh
