[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdivicomtools"
version = "0.2.0"
description = "Collection of tools for working multimodal data in interaction and communication research"
readme = "README.md"
license = "MIT"
authors = [
  {name = "Martin Schulte-Rüther", email = "martin@schulte-ruether.de"},
]
requires-python = ">=3.7"

dependencies = [
  "requests",
  "pandas",
  "importlib-metadata; python_version < '3.8'"
]

[tool.setuptools]
license-files = ["LICENSE"]

[project.scripts]
mdivicom = "mdivicomtools.cli:main"

[project.urls]
"Source" = "https://github.com/msrresearch/mdivicomtools"
"Tracker" = "https://github.com/msrresearch/mdivicomtools/issues"
